<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <!-- Top Linear Layout -->
    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/my_light_primary"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_layout"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/player_turn"
                android:textColor="@color/player1"
                android:textSize="23sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/restartButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/black"
                android:gravity="center"
                android:onClick="restartGame"
                android:text="@string/restart_button"
                android:textColor="@color/textcolor"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>


    <RadioGroup
        android:id="@+id/levelSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout2"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/level"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="5dp"/>
        <RadioButton
            android:id="@+id/levelEasy"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="2dp"
            android:text="@string/easy"
            android:textSize="18sp"
            android:textColor="@color/white"/>
        <RadioButton
            android:id="@+id/levelMedium"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="2dp"
            android:textSize="18sp"
            android:text="@string/medium"
            android:textColor="@color/white"/>
        <RadioButton
            android:id="@+id/levelHard"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="2dp"
            android:textSize="18sp"
            android:text="@string/hard"
            android:textColor="@color/white"/>
    </RadioGroup>



    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout2"
        android:layout_marginTop="44dp"
        android:padding="16dp"
        app:columnCount="1"
        app:rowCount="3">

        <!-- Row 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:weightSum="3">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:textSize="40sp"
                android:textStyle="bold"
                android:shadowColor="#000000"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="10"
                android:elevation="16dp"
                android:translationZ="18dp"
                android:textColor="#FFFFFF"
                android:gravity="center" />



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:textSize="40sp"
                android:textStyle="bold"
                android:shadowColor="#000000"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="10"
                android:elevation="16dp"
                android:translationZ="18dp"
                android:textColor="#FFFFFF"
                android:gravity="center" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:textSize="40sp"
                android:textStyle="bold"
                android:shadowColor="#000000"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="10"
                android:elevation="16dp"
                android:translationZ="18dp"
                android:textColor="#FFFFFF"
                android:gravity="center" />
        </LinearLayout>

        <!-- Row 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:weightSum="3">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:textSize="40sp"
                android:textStyle="bold"
                android:shadowColor="#000000"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="10"
                android:elevation="16dp"
                android:translationZ="18dp"
                android:textColor="#FFFFFF"
                android:gravity="center" />



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:textSize="40sp"
                android:textStyle="bold"
                android:shadowColor="#000000"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="10"
                android:elevation="16dp"
                android:translationZ="18dp"
                android:textColor="#FFFFFF"
                android:gravity="center" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:textSize="40sp"
                android:textStyle="bold"
                android:shadowColor="#000000"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="10"
                android:elevation="16dp"
                android:translationZ="18dp"
                android:textColor="#FFFFFF"
                android:gravity="center" />
        </LinearLayout>

        <!-- Row 3 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:weightSum="3">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:textSize="40sp"
                android:textStyle="bold"
                android:shadowColor="#000000"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="10"
                android:elevation="16dp"
                android:translationZ="18dp"
                android:textColor="#FFFFFF"
                android:gravity="center" />



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:textSize="40sp"
                android:textStyle="bold"
                android:shadowColor="#000000"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="10"
                android:elevation="16dp"
                android:translationZ="18dp"
                android:textColor="#FFFFFF"
                android:gravity="center" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:textSize="40sp"
                android:textStyle="bold"
                android:shadowColor="#000000"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="10"
                android:elevation="16dp"
                android:translationZ="18dp"
                android:textColor="#FFFFFF"
                android:gravity="center" />
        </LinearLayout>
    </androidx.gridlayout.widget.GridLayout>


    <!-- Results Layout -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gridLayout"
        android:layout_marginBottom="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3">

        <!-- Player 1 Result Frame -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/player_1"
                android:textColor="@color/player1"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/player_1_score"
                android:textColor="@color/player1"
                android:textSize="35sp" />
        </LinearLayout>

        <!-- Ties Frame -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:gravity="center"
                android:text="@string/match_ties"
                android:textColor="@color/gray"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/match_ties_score"
                android:textColor="@color/my_light_on_primary"
                android:textSize="35sp" />
        </LinearLayout>

        <!-- Player 2 Result Frame -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/player_2"
                android:textColor="@color/yellow"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/player_2_score"
                android:textColor="@color/yellow"
                android:textSize="35sp" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
